--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "aipetgame2",
+  "name": "frontend",
   "version": "1.0.0",
   "private": true,
-  "dependencies": {
-    "aipetgame2": "file:",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-scripts": "^5.0.0"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "frontend": "file:",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^4.0.3"
   },
   "browserslist": {
     "production": [
